Commit-03 - Added Real Content w/h connecting links

--- a/Portfolio_Main_Site/project-bunker.html
+++ b/Portfolio_Main_Site/project-bunker.html
@@ -15,12 +15,11 @@
 
 <body>
 
-    <nav class="nav-main">
-        <a href="Index.html" class="nav-main-items">Home</a>
-        <a href="#the-studio" class="nav-main-items">The Studio</a>
-        <a href="Index.html#projects" class="nav-main-items">Projects</a>
-        <a href="service.html" class="nav-main-items">Services</a>
-        <a href="contact.html" class="nav-main-items">Contact Us</a>
+    <nav class="nav-main element-container">
+        <a href="index.html" class="nav-main-items" id="home-nav"> Home</a>
+        <a href="index.html#about-me" class="nav-main-items" id="bio-nav">About me</a>
+        <a href="index.html#projects" class="nav-main-items" id="projects-nav">Projects</a>
+        <a href="index.html#contact" class="nav-main-items" id="projects-nav">Contact</a>
     </nav>
 
     <div class="element-container">
